--- a/wechat-asyncio/logger.conf
+++ b/wechat-asyncio/logger.conf
@@ -26,16 +26,19 @@ propagate=0
 keys=hand01,hand02
 
 [handler_hand01]
-class=handlers.RotatingFileHandler
+#class=handlers.RotatingFileHandler
+class=StreamHandler
+args=(sys.stdout,)
 level=DEBUG
 formatter=form01
-args=('wx.log', 'a', 10*1024*1024, 5)
 
 [handler_hand02]
-class=handlers.RotatingFileHandler
+#class=handlers.RotatingFileHandler
+class=StreamHandler
 level=DEBUG
 formatter=form01
-args=('monitor.log', 'a', 10*1024*1024, 5)
+args=(sys.stdout,)
+#args=('monitor.log', 'a', 10*1024*1024, 5)
 
 ###############################################
 
@@ -43,5 +46,5 @@ args=('monitor.log', 'a', 10*1024*1024, 5)
 keys=form01
 
 [formatter_form01]
-format=%(asctime)s %(filename)s[line:%(lineno)d] %(levelname)s %(message)s
+format=%(asctime)s %(filename)s +%(lineno)d %(levelname)s %(message)s
 datefmt=%a, %d %b %Y %H:%M:%S
